--- a/config/immortalwrt/x86_64.config
+++ b/config/immortalwrt/x86_64.config
@@ -40,8 +40,8 @@ CONFIG_PACKAGE_luci-app-onliner=y
 CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-app-homeproxy=y
 CONFIG_PACKAGE_luci-app-ttyd=y
-CONFIG_PACKAGE_luci-app-upnp=y
 CONFIG_PACKAGE_luci-app-vlmcsd=y
+CONFIG_PACKAGE_luci-app-socat=y
 
 # Software
 CONFIG_PACKAGE_autosamba=y
@@ -63,6 +63,7 @@ CONFIG_PACKAGE_ipv6helper=y
 # CONFIG_PACKAGE_docker-compose is not set
 
 # Applications
+# CONFIG_PACKAGE_luci-app-upnp is not set
 # CONFIG_PACKAGE_luci-app-netdata is not set
 # CONFIG_PACKAGE_luci-app-cifs-mount is not set
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
