--- a/config/immortalwrt/x86_64.config
+++ b/config/immortalwrt/x86_64.config
@@ -28,6 +28,8 @@ CONFIG_PACKAGE_luci-app-argon-config=y
 
 # Applications
 CONFIG_PACKAGE_luci-app-qbittorrent=y
+CONFIG_PACKAGE_luci-app-transmission=y
+CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-diskman=y
